<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.android.singlescreenapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ship" />

        <TextView
            style="@style/CompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ship"
            android:text="@string/company_name" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rsz_old">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/line" />

            <TextView
                style="@style/CompanyInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_information" />

            <TextView
                style="@style/CompanyOffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_offer" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="16dp"
                android:background="#424242" />

            <TextView
                style="@style/CompanyInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_person" />

            <TextView
                style="@style/CompanyContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/location"
                android:text="@string/location" />

            <TextView
                style="@style/CompanyContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/email"
                android:text="@string/email" />

            <TextView
                style="@style/CompanyContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/phone"
                android:text="@string/phone" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/line2" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

